[package]

name = "changecase"
version = "0.0.7"
authors = ["Andrei Vacariu <andrei@avacariu.me>"]
license = "MIT"
description = """
A trait and implementation for changing the case of Strings and &str.

It currently supports uppercase, lowercase, alternating case, and inverting
case. Title case is in the works.
"""
homepage = "https://github.com/avacariu/rust-changecase"
repository = "https://github.com/avacariu/rust-changecase"
keywords = ["uppercase", "lowercase", "titlecase"]
